Bug 472635 Do nothing if im contexts don't match r=masayuki,masaki.katakai sr=roc